--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
@@ -44,5 +45,19 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
+  },
+  "resolutions": {
+    "webpack5": {
+      "dependencies": {
+        "fs-extra": "10.0.0"
+      },
+      "resolve": {
+        "fallback": {
+          "fs": false,
+          "path": false,
+          "os": false
+        }
+      }
+    }
   }
 }
