--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-sticky": "^6.0.3",
     "typeface-poppins": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
