--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@emailjs/browser": "^3.11.0",
     "@googlemaps/google-maps-services-js": "^3.3.28",
     "@react-google-maps/api": "^2.18.1",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "firebase": "^10.4.0",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
