--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.4.0",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
